--- a/src/components/Home/index.css
+++ b/src/components/Home/index.css
@@ -8,16 +8,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-}
-
-.profile-img {
-  width: 300px;
-  border-radius: 400px;
-  margin: auto;
-  margin-top: 100px;
-  border: 2px solid #ffffff;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-  display: none;
+  padding-bottom: 30px;
 }
 
 .dark {
@@ -40,7 +31,7 @@
 
 .about-me-para {
   font-family: 'Raleway', sans-serif;
-  color: #000000bd;
+  color: #000000c9;
   font-size: 1.2em;
   font-optical-sizing: auto;
   font-weight: 500;
@@ -48,8 +39,46 @@
   line-height: 30px;
 }
 
+.profile-pic {
+  width: 100%;
+  border-radius: 400px;
+  border: 2px solid #ffffff;
+  margin-top: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  animation: moveUpDown 3s infinite alternate ease-in-out;
+}
+
+@keyframes moveUpDown {
+  0% {
+    transform: translateY(0);
+  }
+  100% {
+    transform: translateY(-20px);
+  }
+}
+
+.profile-dot {
+  background-color: #ffffff3b;
+  width: 40px;
+  height: 40px;
+  margin: auto;
+  border-radius: 100px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+}
+
 @media screen and (min-width: 768px) {
+  .about-me-section {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+  }
   .about-me-para {
-    width: 50%;
+    width: 70%;
+  }
+  .profile-pic {
+    width: 300px;
+    margin-top: 50px;
   }
 }
