--- a/src/components/Home/index.css
+++ b/src/components/Home/index.css
@@ -39,8 +39,14 @@
   line-height: 30px;
 }
 
+.profile-pic-cont {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .profile-pic {
-  width: 100%;
+  width: 90%;
   border-radius: 400px;
   border: 2px solid #ffffff;
   margin-top: 10px;
@@ -58,14 +64,72 @@
 }
 
 .profile-dot {
-  background-color: #ffffff3b;
+  background-color: white;
   width: 40px;
   height: 40px;
+  border: 0px;
+  font-size: 25px;
+  color: #5b79cc;
+  outline: none;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   margin: auto;
   border-radius: 100px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   backdrop-filter: blur(10px);
   -webkit-backdrop-filter: blur(10px);
+}
+
+.button-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+
+.extra-buttons {
+  display: flex;
+  position: absolute;
+  transition: all 0.5s ease-in-out;
+  pointer-events: none;
+}
+
+.extra-button {
+  background-color: white;
+  opacity: 0;
+  position: absolute;
+  transition: all 0.5s ease-in-out;
+}
+
+.extra-button.left {
+  transform: translateX(-50px);
+  color: rgb(255, 0, 85);
+}
+
+.extra-button.right {
+  transform: translateX(0px);
+  color: #7142af;
+}
+
+.extra-buttons.visible .extra-button {
+  opacity: 1;
+  pointer-events: all;
+}
+
+.extra-buttons.visible .extra-button.left {
+  transform: translateX(-90px);
+}
+
+.extra-buttons.visible .extra-button.right {
+  transform: translateX(50px);
+}
+
+@media screen and (min-width: 576px) {
+  .profile-pic {
+    width: 65%;
+  }
 }
 
 @media screen and (min-width: 768px) {
