--- a/src/components/Home/index.css
+++ b/src/components/Home/index.css
@@ -8,7 +8,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-bottom: 30px;
+  padding-bottom: 50px;
 }
 
 .dark {
@@ -36,11 +36,12 @@
 }
 
 .about-me-para {
-  font-family: 'Raleway', sans-serif;
+  font-family: 'Changa', sans-serif;
+  font-weight: 300;
   color: #000000c9;
   font-size: 1.2em;
   font-optical-sizing: auto;
-  font-weight: 500;
+
   font-style: normal;
   line-height: 30px;
 }
@@ -99,7 +100,7 @@
 .extra-buttons {
   display: flex;
   position: absolute;
-  transition: all 0.5s ease-in-out;
+  transition: all 0.3s ease-in-out;
   pointer-events: none;
 }
 
@@ -107,7 +108,7 @@
   background-color: white;
   opacity: 0;
   position: absolute;
-  transition: all 0.5s ease-in-out;
+  transition: all 0.3s ease-in-out;
 }
 
 .extra-button.left {
@@ -181,7 +182,9 @@
 
 .phone-cont {
   background-color: #ff7e5f;
-  color: #ffffffcc;
+  color: #ffffffe5;
+  font-family: Audiowide;
+  font-size: 15px;
   font-weight: bold;
   width: 180px;
   height: 40px;
@@ -204,6 +207,166 @@
   pointer-events: all;
   transform: translateX(100px);
   transition: all 0.3s ease-in-out;
+}
+
+.email-btn {
+  background-color: #2baf66;
+  width: 200px;
+  height: 40px;
+  padding: 0;
+  border: 0px;
+  color: #ffffffe5;
+  font-size: 17px;
+  font-family: Audiowide;
+  font-weight: bold;
+  outline: none;
+  cursor: pointer;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  margin-top: 15px;
+  border-radius: 50px;
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  transition: 500ms ease-out;
+}
+
+.mail-icon {
+  background-color: #000000c5;
+  color: #7be914;
+  margin-left: 0px;
+  margin-right: 20px;
+}
+
+.email-btn:hover {
+  background-color: #c548c5e0;
+  transition: 500ms ease-out;
+}
+
+.education-section {
+  background-image: url('https://res.cloudinary.com/dkk6a7svu/image/upload/v1720183606/pvwtzup1kwfa9jy8ri9k.jpg');
+  background-size: cover;
+  min-height: 100vh;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.dark-edu {
+  /* background-color: #15292b; */
+}
+
+.edu-h1 {
+  font-family: AudioWide;
+  font-size: 1.5em;
+  color: #4bd462f3;
+  text-align: center;
+  margin: 0;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-right: 10px;
+  padding-left: 10px;
+  background-color: rgba(160, 49, 194, 0.678);
+  width: 200px;
+  margin-left: auto;
+  margin-top: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.edu-icon {
+  margin-right: 10px;
+}
+
+.edu-card-cont {
+  width: 90%;
+  align-self: center;
+  margin-top: 30px;
+}
+
+.edu-card {
+  display: flex;
+  align-items: center;
+}
+
+.edu-institute-img {
+  background-color: #ffffff;
+  width: 60px;
+  border-radius: 100px;
+  border: 2px solid #149cbe;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  transition: 400ms ease-out;
+}
+
+.edu-institute-img:hover {
+  box-shadow: 0px 0px 8px 5px #ffffff;
+  transition: 400ms ease-out;
+}
+
+.inst-hr-line {
+  border-left: 2px solid #ffffff;
+  margin-left: 15px;
+  margin-right: 15px;
+  height: 120px;
+}
+
+.institute-h1 {
+  font-family: AudioWide;
+  margin: 0;
+  padding-bottom: 10px;
+  color: #ffffff;
+  display: flex;
+  align-items: center;
+}
+
+.institute-link-icon {
+  font-size: 15px;
+  color: #ca74b8;
+  margin-left: 10px;
+}
+
+.anchor-link {
+  text-decoration: none;
+}
+
+.course-h1 {
+  font-family: AudioWide;
+  color: #60c740;
+  margin: 0;
+  padding-bottom: 10px;
+}
+
+.duration-para {
+  font-family: AudioWide;
+  color: #bea414;
+  margin: 0;
+  padding-bottom: 10px;
+  display: flex;
+  align-items: center;
+}
+
+.duration-icon {
+  color: #ffffff;
+  font-size: 20px;
+  margin-right: 5px;
+}
+
+.nxtwave-para {
+  font-family: 'Changa', sans-serif;
+  color: #ffffff;
+  margin: 0;
+}
+
+@media screen and (min-width: 350px) {
+  .edu-institute-img {
+    width: 70px;
+  }
+}
+
+@media screen and (min-width: 380px) {
+  .edu-institute-img {
+    width: 100px;
+  }
 }
 
 @media screen and (min-width: 576px) {
@@ -236,11 +399,21 @@
   .profile-pic-cont {
     margin-top: 0px;
   }
+  .inst-h1-cont {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+  }
 }
 
 @media screen and (min-width: 992px) {
   .role-h1 {
     font-size: 3em;
     letter-spacing: 10px;
+  }
+  .about-me-para {
+    width: 65%;
+    font-size: 1.1em;
   }
 }
