--- a/src/components/Home/index.css
+++ b/src/components/Home/index.css
@@ -244,23 +244,25 @@
   transition: 500ms ease-out;
 }
 
+/* education section */
+
 .education-section {
   background-image: url('https://res.cloudinary.com/dkk6a7svu/image/upload/v1720183606/pvwtzup1kwfa9jy8ri9k.jpg');
   background-size: cover;
-  min-height: 100vh;
   height: 100%;
   display: flex;
   flex-direction: column;
+  padding-bottom: 100px;
 }
 
 .dark-edu {
-  /* background-color: #15292b; */
+  background-image: url('https://res.cloudinary.com/dkk6a7svu/image/upload/v1720262598/c0rha2umxixtwhgxdxgd.jpg');
 }
 
 .edu-h1 {
   font-family: AudioWide;
   font-size: 1.5em;
-  color: #4bd462f3;
+  color: #4bd49fee;
   text-align: center;
   margin: 0;
   padding-top: 10px;
@@ -272,6 +274,9 @@
   margin-left: auto;
   margin-top: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .edu-icon {
@@ -281,12 +286,19 @@
 .edu-card-cont {
   width: 90%;
   align-self: center;
-  margin-top: 30px;
 }
 
 .edu-card {
   display: flex;
   align-items: center;
+}
+
+.edu-card-1 {
+  margin-top: 50px;
+}
+
+.edu-card-2 {
+  margin-top: 80px;
 }
 
 .edu-institute-img {
@@ -301,6 +313,7 @@
 .edu-institute-img:hover {
   box-shadow: 0px 0px 8px 5px #ffffff;
   transition: 400ms ease-out;
+  transform: translateY(-5px);
 }
 
 .inst-hr-line {
@@ -308,6 +321,16 @@
   margin-left: 15px;
   margin-right: 15px;
   height: 120px;
+}
+
+.institute-description {
+  width: 100%;
+  transition: 400ms ease-out;
+}
+
+.institute-description:hover {
+  transform: translateY(-5px);
+  transition: 400ms ease-out;
 }
 
 .institute-h1 {
@@ -357,6 +380,82 @@
   margin: 0;
 }
 
+/* skills section */
+
+.skills-section {
+  background-image: url('https://res.cloudinary.com/dkk6a7svu/image/upload/v1720264911/aritll3pfrsgzzuowrnp.jpg');
+  background-size: cover;
+  min-height: 100vh;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.dark-skills {
+  background-image: url('https://res.cloudinary.com/dkk6a7svu/image/upload/v1720322138/peehwny9p3yfjx2o27r6.jpg');
+}
+
+.skills-ul-cont {
+  list-style-type: none;
+  padding-left: 0px;
+  width: 90%;
+  display: flex;
+  /* flex-direction: column; */
+  justify-content: space-around;
+  align-items: center;
+  align-self: center;
+  flex-wrap: wrap;
+  margin-top: 50px;
+}
+
+.skills-card {
+  display: flex;
+  align-items: center;
+  margin-right: 40px;
+  margin-bottom: 40px;
+}
+
+.skill-img {
+  width: 100px;
+  border: 2px solid #ffffffd8;
+  border-radius: 100px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  transition: 400ms ease-out;
+}
+
+.skill-img:hover {
+  transition: 400ms ease-out;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+  transform: translateY(-2px);
+}
+
+.dark-skill-img {
+  border: 2px solid #3db6a2;
+}
+
+.anchor-skill-link {
+  font-family: 'Changa', sans-serif;
+  margin-left: 10px;
+  font-weight: 300;
+  color: #ffffffd8;
+  transition: 400ms ease-out;
+}
+
+.dark-anchor-skill {
+  color: #3db6a2;
+  transition: 400ms ease-out;
+}
+
+.anchor-skill-link:hover {
+  color: #6b3db6;
+}
+
+.Certificate-icon {
+  font-family: 'Changa', sans-serif;
+  font-size: 16px;
+  margin-left: 8px;
+}
+
 @media screen and (min-width: 350px) {
   .edu-institute-img {
     width: 70px;
@@ -380,6 +479,9 @@
 }
 
 @media screen and (min-width: 768px) {
+  .home-cont-1 {
+    min-height: 0vh;
+  }
   .about-me-section {
     display: flex;
     justify-content: space-between;
@@ -405,9 +507,20 @@
     justify-content: space-between;
     align-items: center;
   }
+  .skills-ul-cont {
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+  }
+  .skills-card {
+  }
 }
 
 @media screen and (min-width: 992px) {
+  .home-cont-1 {
+    min-height: 100vh;
+  }
   .role-h1 {
     font-size: 3em;
     letter-spacing: 10px;
