--- a/src/components/Home/index.css
+++ b/src/components/Home/index.css
@@ -270,7 +270,8 @@
   padding-right: 10px;
   padding-left: 10px;
   background-color: rgba(160, 49, 194, 0.678);
-  width: 200px;
+  min-width: 200px;
+  width: auto;
   margin-left: auto;
   margin-top: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
@@ -286,98 +287,8 @@
 .edu-card-cont {
   width: 90%;
   align-self: center;
-}
-
-.edu-card {
-  display: flex;
-  align-items: center;
-}
-
-.edu-card-1 {
-  margin-top: 50px;
-}
-
-.edu-card-2 {
-  margin-top: 80px;
-}
-
-.edu-institute-img {
-  background-color: #ffffff;
-  width: 60px;
-  border-radius: 100px;
-  border: 2px solid #149cbe;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-  transition: 400ms ease-out;
-}
-
-.edu-institute-img:hover {
-  box-shadow: 0px 0px 8px 5px #ffffff;
-  transition: 400ms ease-out;
-  transform: translateY(-5px);
-}
-
-.inst-hr-line {
-  border-left: 2px solid #ffffff;
-  margin-left: 15px;
-  margin-right: 15px;
-  height: 120px;
-}
-
-.institute-description {
-  width: 100%;
-  transition: 400ms ease-out;
-}
-
-.institute-description:hover {
-  transform: translateY(-5px);
-  transition: 400ms ease-out;
-}
-
-.institute-h1 {
-  font-family: AudioWide;
-  margin: 0;
-  padding-bottom: 10px;
-  color: #ffffff;
-  display: flex;
-  align-items: center;
-}
-
-.institute-link-icon {
-  font-size: 15px;
-  color: #ca74b8;
-  margin-left: 10px;
-}
-
-.anchor-link {
-  text-decoration: none;
-}
-
-.course-h1 {
-  font-family: AudioWide;
-  color: #60c740;
-  margin: 0;
-  padding-bottom: 10px;
-}
-
-.duration-para {
-  font-family: AudioWide;
-  color: #bea414;
-  margin: 0;
-  padding-bottom: 10px;
-  display: flex;
-  align-items: center;
-}
-
-.duration-icon {
-  color: #ffffff;
-  font-size: 20px;
-  margin-right: 5px;
-}
-
-.nxtwave-para {
-  font-family: 'Changa', sans-serif;
-  color: #ffffff;
-  margin: 0;
+  list-style-type: none;
+  padding-left: 0px;
 }
 
 /* skills section */
@@ -385,10 +296,10 @@
 .skills-section {
   background-image: url('https://res.cloudinary.com/dkk6a7svu/image/upload/v1720264911/aritll3pfrsgzzuowrnp.jpg');
   background-size: cover;
-  min-height: 100vh;
   height: 100%;
   display: flex;
   flex-direction: column;
+  padding-bottom: 50px;
 }
 
 .dark-skills {
@@ -400,7 +311,6 @@
   padding-left: 0px;
   width: 90%;
   display: flex;
-  /* flex-direction: column; */
   justify-content: space-around;
   align-items: center;
   align-self: center;
@@ -408,64 +318,31 @@
   margin-top: 50px;
 }
 
-.skills-card {
+/* extra certificates section */
+
+.extra-certificates-section {
+  background-image: url('https://res.cloudinary.com/dkk6a7svu/image/upload/v1720436331/zfc2tspigofuauonn025.jpg');
+  background-size: cover;
+  min-height: 100vh;
+  height: 100%;
   display: flex;
+  flex-direction: column;
+}
+
+.dark-extra-certificates-section {
+  background-image: url('https://res.cloudinary.com/dkk6a7svu/image/upload/v1720440774/g0lfjpvn8gdpnrt6oemt.avif');
+}
+
+.certificates-ul-cont {
+  list-style-type: none;
+  padding-left: 0px;
+  width: 90%;
+  display: flex;
+  flex-direction: column;
   align-items: center;
-  margin-right: 40px;
-  margin-bottom: 40px;
-}
-
-.skill-img {
-  width: 100px;
-  border: 2px solid #ffffffd8;
-  border-radius: 100px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-  transition: 400ms ease-out;
-}
-
-.skill-img:hover {
-  transition: 400ms ease-out;
-  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-  transform: translateY(-2px);
-}
-
-.dark-skill-img {
-  border: 2px solid #3db6a2;
-}
-
-.anchor-skill-link {
-  font-family: 'Changa', sans-serif;
-  margin-left: 10px;
-  font-weight: 300;
-  color: #ffffffd8;
-  transition: 400ms ease-out;
-}
-
-.dark-anchor-skill {
-  color: #3db6a2;
-  transition: 400ms ease-out;
-}
-
-.anchor-skill-link:hover {
-  color: #6b3db6;
-}
-
-.Certificate-icon {
-  font-family: 'Changa', sans-serif;
-  font-size: 16px;
-  margin-left: 8px;
-}
-
-@media screen and (min-width: 350px) {
-  .edu-institute-img {
-    width: 70px;
-  }
-}
-
-@media screen and (min-width: 380px) {
-  .edu-institute-img {
-    width: 100px;
-  }
+  align-self: center;
+  flex-wrap: wrap;
+  margin-top: 80px;
 }
 
 @media screen and (min-width: 576px) {
@@ -475,6 +352,10 @@
   .role-h1 {
     font-size: 2.8em;
     letter-spacing: 10px;
+  }
+  .certificates-ul-cont {
+    flex-direction: row;
+    justify-content: center;
   }
 }
 
@@ -508,12 +389,7 @@
     align-items: center;
   }
   .skills-ul-cont {
-    flex-direction: row;
     justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-  }
-  .skills-card {
   }
 }
 
