--- a/src/components/CertificateCard/index.css
+++ b/src/components/CertificateCard/index.css
@@ -1,48 +1,152 @@
-.certificate-card {
-  background-color: #ffffffcb;
-  width: 270px;
-  height: 409px;
-  padding: 20px;
+.card {
+  width: 250px;
+  border-radius: 20px;
+  background: #1b233d;
+  padding: 5px;
+  overflow: hidden;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 20px 0px;
+  transition: transform 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  margin: auto;
+}
+
+.card:hover {
+  transform: scale(1.05);
+}
+
+.card .top-section {
+  height: 190px;
+  border-radius: 15px;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-  transition: 400ms ease-out;
-  border-radius: 0px 20px 20px 20px;
+  background: linear-gradient(
+    45deg,
+    rgb(4, 159, 187) 0%,
+    rgb(80, 246, 255) 100%
+  );
+  background-image: url('https://res.cloudinary.com/dkk6a7svu/image/upload/v1720938453/knj91idkee9jvuqkfdnc.jpg');
+  background-size: cover;
+  position: relative;
 }
 
-.certificate-card:hover {
-  transform: translateY(-5px);
-  box-shadow: 0 8px 16px 8px rgba(0, 0, 0, 0.2);
-  transition: 400ms ease-out;
+.card .top-section .border {
+  border-bottom-right-radius: 10px;
+  height: 30px;
+  width: 130px;
+  background: white;
+  background: #1b233d;
+  position: relative;
+  transform: skew(-40deg);
+  box-shadow: -10px -10px 0 0 #1b233d;
 }
 
-.certificate-img {
+.card .top-section .border::before {
+  content: '';
+  position: absolute;
+  width: 15px;
+  height: 15px;
+  top: 0;
+  right: -15px;
+  background: rgba(255, 255, 255, 0);
+  border-top-left-radius: 10px;
+  box-shadow: -5px -5px 0 2px #1b233d;
+}
+
+.card .top-section::before {
+  content: '';
+  position: absolute;
+  top: 30px;
+  left: 0;
+  background: rgba(255, 255, 255, 0);
+  height: 15px;
+  width: 15px;
+  border-top-left-radius: 15px;
+  box-shadow: -5px -5px 0 2px #1b233d;
+}
+
+.card .top-section .icons {
+  position: absolute;
+  top: 0;
   width: 100%;
-  opacity: 0.5;
-}
-
-.certificate-desc-cont {
-  align-self: flex-start;
+  height: 30px;
   display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  width: 100%;
+  justify-content: space-between;
+}
+
+.card .top-section .icons .logo {
+  height: 100%;
+  aspect-ratio: 1;
+  padding: 7px 0 7px 15px;
+}
+
+.card .top-section .icons .logo .top-section {
   height: 100%;
 }
 
-.certificate-course-name {
-  font-family: 'Roboto';
-  color: #228327;
-  text-align: start;
-  margin: 0;
+.card .top-section .icons .social-media {
+  height: 100%;
+  padding: 8px 15px;
+  display: flex;
+  gap: 7px;
+}
+
+.card .top-section .icons .social-media .svg {
+  height: 100%;
+  fill: #1b233d;
+}
+
+.card .top-section .icons .social-media .svg:hover {
+  fill: white;
+}
+
+.card .bottom-section {
   margin-top: 15px;
-  margin-bottom: 10px;
-  line-height: 20px;
+  padding: 10px 5px;
+  height: 250px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.card .bottom-section .title {
+  display: block;
+  font-size: 17px;
+  font-weight: bolder;
+  color: white;
+  text-align: center;
+  letter-spacing: 2px;
+}
+
+.card .bottom-section .row {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 20px;
+}
+
+.card .bottom-section .row .item {
+  flex: 30%;
+  text-align: center;
+  padding: 5px;
+  color: rgba(170, 222, 243, 0.721);
+}
+
+.card .bottom-section .row .item .big-text {
+  font-size: 12px;
+  display: block;
+}
+
+.card .bottom-section .row .item .regular-text {
+  font-size: 9px;
+}
+
+.card .bottom-section .row .item:nth-child(2) {
+  border-left: 1px solid rgba(255, 255, 255, 0.126);
+  border-right: 1px solid rgba(255, 255, 255, 0.126);
 }
 
 .skill-covered-ul-cont {
-  list-style-type: decimal;
+  list-style-type: none;
+  padding-left: 0px;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -50,15 +154,20 @@
 
 .skill-covered {
   font-family: 'Changa', sans-serif;
-  color: #13a02b;
+  color: #ffffffe1;
   font-size: 13px;
   font-weight: 500;
   padding: 0px 10px 0px 10px;
   margin-bottom: 10px;
-  background-color: #000000d0;
+  background-color: #7062bd;
   text-align: center;
   border-radius: 50px;
   width: auto;
+}
+
+.anchor-cert-link {
+  align-self: center;
+  margin-top: 10px;
 }
 
 .certificate-btn {
@@ -69,17 +178,19 @@
   cursor: pointer;
   outline: none;
   border-radius: 50px;
-  margin-top: 10px;
-  align-self: center;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-  transition: 600ms ease-out;
+  transition: 400ms ease-out;
 }
 
 .certificate-btn:hover {
   box-shadow: none;
-  background-color: #b18bddd3;
-  transition: 400ms ease-out;
+  background-color: #4fe9d4;
+  transition: 300ms ease-out;
 }
 
-@media screen and (min-width: 576px) {
+.cert-logo {
+  font-family: AudioWide;
+  color: #ffffff;
+  font-size: 16px;
+  font-style: italic;
 }
