--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -1,5 +1,6 @@
 .navbar {
   background-color: #ffffff3b;
+  /* background-color: #ffffff; */
   width: 90%;
   margin-top: 10px;
   border-radius: 11px;
@@ -103,42 +104,71 @@
 }
 
 .nav-link-btn {
-  background: transparent;
-  outline: none;
-  border: 0px;
-  cursor: pointer;
-  display: flex;
-  align-items: center;
-  color: #000000;
+  display: inline-block;
+  padding: 5px 10px;
   font-size: 15px;
-  font-family: 'Changa', sans-serif;
-  font-optical-sizing: auto;
-  font-weight: 400;
-  font-style: normal;
-  position: relative;
-}
-
-.nav-link-btn:active {
+  font-weight: 100;
+  color: #0f5050;
   background: transparent;
+  border-radius: 50px;
+  text-align: center;
+  text-decoration: none;
+  cursor: pointer;
+  position: relative;
+  border: none;
+  z-index: 1;
+  font-family: AudioWide;
 }
 
-.nav-link-btn::after {
+.nav-link-btn {
+  overflow: hidden;
+}
+
+.nav-link-btn:before {
   content: '';
   position: absolute;
-  bottom: -2px;
-  left: 0;
-  width: 0;
-  height: 2px;
-  background-color: #4cca80;
-  transition: width 0.3s ease-out;
+  top: 50%;
+  left: -100%;
+  width: 100%;
+  height: 100%;
+  background-color: #feb47b;
+  transition: left 0.5s ease-in-out;
+  z-index: -1;
+}
+
+.nav-link-btn:hover:before {
+  left: 0%;
+}
+
+.nav-link-btn:after {
+  content: '';
+  position: absolute;
+  bottom: 50%;
+  right: -100%;
+  width: 100%;
+  height: 100%;
+  background-color: #feb47b;
+  transition: right 0.5s ease-in-out;
+  z-index: -1;
+}
+
+.nav-link-btn:hover:after {
+  right: 0%;
 }
 
 .nav-link-btn:hover::after {
   width: 100%;
 }
-
 .nav-dark {
-  color: #ffffffde;
+  color: #e0e9bf;
+}
+
+.nav-dark::before {
+  background-color: #2d0f5c;
+}
+
+.nav-dark::after {
+  background-color: #2d0f5c;
 }
 
 @media screen and (min-width: 576px) {
@@ -186,4 +216,5 @@
     width: 70%;
     margin-left: auto;
   }
+  
 } */
