--- a/src/components/CertificateCard/index.css
+++ b/src/components/CertificateCard/index.css
@@ -111,10 +111,12 @@
 .card .bottom-section .title {
   display: block;
   font-size: 17px;
-  font-weight: bolder;
+  font-weight: 400;
   color: white;
   text-align: center;
   letter-spacing: 2px;
+  font-family: 'Changa', sans-serif;
+  line-height: 26px;
 }
 
 .card .bottom-section .row {
