--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -104,71 +104,70 @@
 }
 
 .nav-link-btn {
-  display: inline-block;
-  padding: 5px 10px;
-  font-size: 15px;
-  font-weight: 100;
   color: #0f5050;
-  background: transparent;
-  border-radius: 50px;
-  text-align: center;
-  text-decoration: none;
-  cursor: pointer;
-  position: relative;
+  z-index: 2;
+  display: block;
+  width: fit-content;
+  height: auto;
+  outline: none;
   border: none;
-  z-index: 1;
+  background-color: inherit;
+  font-size: 15px;
+  padding: 5px 10px;
+  position: relative;
+  cursor: pointer;
   font-family: AudioWide;
+  font-weight: 100;
 }
 
-.nav-link-btn {
-  overflow: hidden;
-}
-
-.nav-link-btn:before {
+.nav-link-btn::before {
   content: '';
-  position: absolute;
-  top: 50%;
-  left: -100%;
+  display: block;
   width: 100%;
   height: 100%;
-  background-color: #feb47b;
-  transition: left 0.5s ease-in-out;
-  z-index: -1;
-}
-
-.nav-link-btn:hover:before {
+  z-index: 3;
+  position: absolute;
+  top: 0%;
   left: 0%;
+  transform: scaleX(0.2) scaleY(0.5) translate(250%, 100%);
+  border-top: solid 0px #333;
+  border-left: solid 0px #333;
+  transition: all 0.4s ease-in-out;
 }
 
-.nav-link-btn:after {
+.nav-link-btn::after {
   content: '';
-  position: absolute;
-  bottom: 50%;
-  right: -100%;
+  display: block;
   width: 100%;
   height: 100%;
-  background-color: #feb47b;
-  transition: right 0.5s ease-in-out;
-  z-index: -1;
+  z-index: 3;
+  position: absolute;
+  top: 0;
+  left: 0;
+  transform: translate(-50%, -50%) scaleX(0.2) scaleY(0.5);
+  border-bottom: solid 0px #333;
+  border-right: solid 0px #333;
+  transition: all 0.4s ease-in-out;
+  background-color: #41a5d3;
 }
 
-.nav-link-btn:hover:after {
-  right: 0%;
+.nav-link-btn:hover::before {
+  transform: translate(0%, 0%) scaleX(1) scaleY(1);
+  border-top: solid 1px #41a5d3;
+  border-left: solid 1px #41a5d3;
+  border-radius: 5px;
 }
 
 .nav-link-btn:hover::after {
-  width: 100%;
+  transform: scaleX(1) scaleY(1) translate(0%, 0%);
+  border-bottom: solid 1px #41a5d3;
+  border-right: solid 1px #41a5d3;
+  background-color: transparent;
+  border-radius: 5px;
 }
+
 .nav-dark {
   color: #e0e9bf;
-}
-
-.nav-dark::before {
-  background-color: #2d0f5c;
-}
-
-.nav-dark::after {
-  background-color: #2d0f5c;
 }
 
 @media screen and (min-width: 576px) {
