--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -112,8 +112,9 @@
 .nav-link-btn {
   color: #0f5050;
   z-index: 2;
+  /* width: fit-content; */
+  width: 150px;
   display: block;
-  width: fit-content;
   height: auto;
   outline: none;
   border: none;
