--- a/src/components/Timeline/index.css
+++ b/src/components/Timeline/index.css
@@ -19,18 +19,57 @@
   background-color: #65ec4a;
 }
 
+.vertical-timeline-outside {
+  max-width: 100vw !important;
+}
+
 .custom-timeline-element .vertical-timeline-element-content {
   border-bottom: none !important;
   box-shadow: none !important;
 }
 
+@keyframes cd-bounce-2-inverse {
+  0% {
+    opacity: 0;
+    -webkit-transform: none;
+    transform: none;
+  }
+
+  60% {
+    opacity: 1;
+    -webkit-transform: translateX(-20px);
+    transform: translateX(-20px);
+  }
+
+  100% {
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+  }
+}
+
 .git-visualizer-img {
-  width: 250px;
+  width: 100%;
 }
 
 .project-h1 {
   font-family: AudioWide;
   font-size: 1.5em;
+  transition: 0.4s ease-in-out;
+}
+
+.anchor-link-project {
+  text-decoration: none;
+  color: #ffffff;
+}
+
+.project-link-icon {
+  font-size: 15px;
+  margin-left: 5px;
+}
+
+.project-h1:hover {
+  color: #89bbeb;
+  transition: 0.4s ease-in-out;
 }
 
 .project-desc {
@@ -65,4 +104,10 @@
   border-radius: 50px;
   width: auto;
   padding: 2px 10px 2px 10px;
+}
+
+@media screen and (min-width: 576px) {
+  .git-visualizer-img {
+    width: 250px;
+  }
 }
