changes in navbar

--- a/src/components/EducationCard/index.css
+++ b/src/components/EducationCard/index.css
@@ -47,7 +47,7 @@
   font-family: AudioWide;
   margin: 0;
   padding-bottom: 10px;
-  color: #790b61;
+  color: #46ffe6;
   display: flex;
   align-items: center;
 }
@@ -75,7 +75,7 @@
 
 .duration-para {
   font-family: AudioWide;
-  color: #46ffe6;
+  color: #c8ff46;
   margin: 0;
   padding-bottom: 10px;
   display: flex;
