--- a/src/components/Timeline/index.css
+++ b/src/components/Timeline/index.css
@@ -80,8 +80,9 @@
 .tech-used-h1 {
   font-family: AudioWide;
   font-style: italic;
-  color: #7effbe;
+  color: #56ff46;
   font-size: 1em;
+  font-weight: 500;
 }
 
 .technologies-ul-cont {
