--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -31,47 +31,42 @@
   align-items: center;
 }
 
-.dark-mode-btn {
-  color: #000000;
-  background: transparent;
-  border: 0px;
-  padding: 0px;
-  outline: none;
+.hamburger {
   cursor: pointer;
-  margin-right: 25px;
-  font-size: 25px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  margin-right: 2px;
 }
 
-.dark-mode-btn:active {
-  background: transparent;
-  color: #000000;
+.hamburger input {
+  display: none;
 }
 
-.darkModeIcon {
-  color: #ffffff;
+.hamburger svg {
+  height: 2.5em;
+  transition: transform 600ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.ham-btn {
-  font-size: 30px;
-  color: #d341ba;
-  background: transparent;
-  outline: none;
-  cursor: pointer;
-  border: 0px;
-  padding: 0px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+.line {
+  fill: none;
+  stroke: #d341ba;
+  stroke-linecap: round;
+  stroke-linejoin: round;
+  stroke-width: 3;
+  transition:
+    stroke-dasharray 600ms cubic-bezier(0.4, 0, 0.2, 1),
+    stroke-dashoffset 600ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.ham-btn:active {
-  background: transparent;
-  color: #d341ba;
+.line-top-bottom {
+  stroke-dasharray: 12 63;
+}
+
+.hamburger input:checked + svg {
+  transform: rotate(-45deg);
+}
+
+.hamburger input:checked + svg .line-top-bottom {
+  stroke-dasharray: 20 300;
+  stroke-dashoffset: -32.42;
 }
 
 .nav-cont-1 {
@@ -110,93 +105,28 @@
 }
 
 .nav-link-btn {
-  color: #0f5050;
-  z-index: 2;
-  /* width: fit-content; */
-  width: 150px;
-  display: block;
-  height: auto;
+  background: transparent;
   outline: none;
-  border: none;
-  font-size: 15px;
-  padding: 5px 10px;
-  position: relative;
+  border: 0px;
   cursor: pointer;
   font-family: AudioWide;
   font-weight: 100;
-  border-radius: 5px;
+  border-radius: 10px;
+  transition: 0.4s ease-out;
 }
 
-.nav-link-btn::before {
-  content: '';
-  display: block;
-  width: 100%;
-  height: 100%;
-  z-index: 3;
-  position: absolute;
-  top: 0%;
-  left: 0%;
-  transform: scaleX(0.2) scaleY(0.5) translate(250%, 100%);
-  border-top: solid 0px #333;
-  border-left: solid 0px #333;
-  transition: all 0.4s ease-in-out;
-  background-color: aqua;
-  border-radius: 5px;
-}
-
-.nav-link-btn::after {
-  content: '';
-  display: block;
-  width: 100%;
-  height: 100%;
-  z-index: 3;
-  position: absolute;
-  top: 0;
-  left: 0;
-  transform: translate(-50%, -50%) scaleX(0.2) scaleY(0.5);
-  border-bottom: solid 0px #333;
-  border-right: solid 0px #333;
-  transition: all 0.4s ease-in-out;
-  border-radius: 5px;
-}
-
-.nav-link-btn:hover::before {
-  transform: translate(0%, 0%) scaleX(1) scaleY(1);
-  border-top: solid 1px #41a5d3;
-  border-left: solid 1px #41a5d3;
-  background-color: transparent;
-}
-
-.nav-link-btn:hover::after {
-  transform: scaleX(1) scaleY(1) translate(0%, 0%);
-  border-bottom: solid 1px #41a5d3;
-  border-right: solid 1px #41a5d3;
-  background-color: transparent;
+.nav-link-btn:hover {
+  background-color: rgb(95, 207, 183);
+  transition: 0.4s ease-out;
 }
 
 .nav-dark {
   color: #f0f0f0ef;
-  background-color: #151525;
 }
 
-.nav-dark::before {
-  background-color: #5bcc6a;
-}
-
-.nav-dark:hover::before {
-  border-top: solid 1px #4dd35e;
-  border-left: solid 1px #4dd35e;
-}
-
-.nav-dark:hover::after {
-  border-bottom: solid 1px #4dd35e;
-  border-right: solid 1px #4dd35e;
-}
-
-@media screen and (min-width: 576px) {
-  .dark-mode-btn {
-    margin-right: 40px;
-  }
+.nav-dark:hover {
+  background-color: rgb(194, 95, 207);
+  transition: 0.4s ease-out;
 }
 
 @media screen and (min-width: 768px) {
@@ -219,7 +149,7 @@
     width: 100%;
     margin: 0px;
   }
-  .ham-btn {
+  .hamburger {
     display: none;
   }
   .nav-link {
@@ -227,9 +157,6 @@
   }
   .nav-link-logo {
     display: none;
-  }
-  .dark-mode-btn {
-    margin-right: 18px;
   }
 }
 
