--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -54,8 +54,7 @@ html {
   stroke-linecap: round;
   stroke-linejoin: round;
   stroke-width: 3;
-  transition:
-    stroke-dasharray 600ms cubic-bezier(0.4, 0, 0.2, 1),
+  transition: stroke-dasharray 600ms cubic-bezier(0.4, 0, 0.2, 1),
     stroke-dashoffset 600ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
