--- a/src/components/SkillsCard/index.css
+++ b/src/components/SkillsCard/index.css
@@ -44,5 +44,18 @@
   margin-left: 8px;
 }
 
-@media screen and (min-width: 445px) {
+/* scroll-animation */
+
+.skills-scroll-item {
+  opacity: 0;
+  transform: translateY(100px);
+  transition:
+    opacity 0.6s ease-out,
+    transform 0.6s ease-out;
+  margin: 20px 0;
+}
+
+.skills-scroll-item.show {
+  opacity: 1;
+  transform: translateY(0);
 }
