--- a/src/components/EducationCard/index.css
+++ b/src/components/EducationCard/index.css
@@ -109,3 +109,18 @@
     width: 100px;
   }
 }
+
+/* scroll-animation */
+
+.education-scroll-item {
+  opacity: 0;
+  transform: translateY(100px);
+  transition:
+    opacity 0.6s ease-out,
+    transform 0.6s ease-out;
+}
+
+.education-scroll-item.show {
+  opacity: 1;
+  transform: translateY(0);
+}
