--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -12,7 +12,7 @@ html {
   padding: 5px 8px 5px 8px;
   position: fixed;
   top: 0;
-  z-index: 1000;
+  z-index: 5;
   backdrop-filter: blur(10px);
   -webkit-backdrop-filter: blur(10px);
   transition: 0.2s ease-in-out;
@@ -54,7 +54,8 @@ html {
   stroke-linecap: round;
   stroke-linejoin: round;
   stroke-width: 3;
-  transition: stroke-dasharray 600ms cubic-bezier(0.4, 0, 0.2, 1),
+  transition:
+    stroke-dasharray 600ms cubic-bezier(0.4, 0, 0.2, 1),
     stroke-dashoffset 600ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
