--- a/src/components/EducationCard/index.css
+++ b/src/components/EducationCard/index.css
@@ -115,9 +115,7 @@
 .education-scroll-item {
   opacity: 0;
   transform: translateY(100px);
-  transition:
-    opacity 0.6s ease-out,
-    transform 0.6s ease-out;
+  transition: opacity 0.6s ease-out, transform 0.6s ease-out;
 }
 
 .education-scroll-item.show {
