--- a/src/components/SkillsCard/index.css
+++ b/src/components/SkillsCard/index.css
@@ -49,9 +49,7 @@
 .skills-scroll-item {
   opacity: 0;
   transform: translateY(100px);
-  transition:
-    opacity 0.6s ease-out,
-    transform 0.6s ease-out;
+  transition: opacity 0.6s ease-out, transform 0.6s ease-out;
   margin: 20px 0;
 }
 
