--- a/src/components/ContactMeForm/index.css
+++ b/src/components/ContactMeForm/index.css
@@ -8,7 +8,7 @@
   max-width: 500px;
   margin: 30px;
   background-color: #001925;
-  padding: 30px;
+  padding: 30px 20px 30px 30px;
   border-left: 5px solid #ff7a01;
   clip-path: polygon(
     0 0,
