--- a/src/components/ContactMeForm/index.css
+++ b/src/components/ContactMeForm/index.css
@@ -7,7 +7,7 @@
 .form-container {
   max-width: 500px;
   margin: 30px;
-  background-color: #001925;
+  background: transparent;
   padding: 30px 20px 30px 30px;
   border-left: 5px solid #ff7a01;
   clip-path: polygon(
@@ -22,6 +22,7 @@
 .heading {
   display: block;
   color: white;
+  font-family: 'Changa', sans-serif;
   font-size: 1.5rem;
   font-weight: 800;
   margin-bottom: 20px;
