--- a/src/components/TitleCard/index.css
+++ b/src/components/TitleCard/index.css
@@ -17,7 +17,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: start;
+  justify-content: flex-start;
   background: #edfbd8;
   border-radius: 0px;
   box-shadow: 0px 0px 5px -3px #111;
