--- a/src/components/ContactMeForm/index.css
+++ b/src/components/ContactMeForm/index.css
@@ -21,7 +21,7 @@
 
 .heading {
   display: block;
-  color: white;
+  color: #d6e2e9;
   font-family: 'Changa', sans-serif;
   font-size: 1.5rem;
   font-weight: 800;
