--- a/src/components/Home/index.css
+++ b/src/components/Home/index.css
@@ -33,6 +33,7 @@
 
 .about-me-para {
   font-family: 'Changa', sans-serif;
+  /* font-family:monospace ; */
   font-weight: 300;
   color: #ffffff7c;
   font-size: 1.2em;
