--- a/src/components/EducationCard/index.css
+++ b/src/components/EducationCard/index.css
@@ -47,7 +47,7 @@
   font-family: AudioWide;
   margin: 0;
   padding-bottom: 10px;
-  color: #46ffe6;
+  color: #d6e2e9;
   display: flex;
   align-items: center;
 }
@@ -64,18 +64,19 @@
 
 .course-h1 {
   font-family: AudioWide;
-  color: #ffffff;
+  color: #2ec4b6;
   margin: 0;
   padding-bottom: 10px;
+  font-style: italic;
 }
 
-.inst-dark .institute-h1 {
-  color: #16801e;
+.inst-dark .course-h1 {
+  color: #68cf5fcc;
 }
 
 .duration-para {
   font-family: AudioWide;
-  color: #c8ff46;
+  color: #c8ff46c7;
   margin: 0;
   padding-bottom: 10px;
   display: flex;
@@ -83,7 +84,7 @@
 }
 
 .inst-dark .duration-para {
-  color: #c2a70c;
+  color: #c2a70cda;
 }
 
 .duration-icon {
@@ -94,7 +95,7 @@
 
 .nxtwave-para {
   font-family: 'Changa', sans-serif;
-  color: #ffffff;
+  color: #ffffffc5;
   margin: 0;
 }
 
@@ -115,7 +116,9 @@
 .education-scroll-item {
   opacity: 0;
   transform: translateY(100px);
-  transition: opacity 0.6s ease-out, transform 0.6s ease-out;
+  transition:
+    opacity 0.6s ease-out,
+    transform 0.6s ease-out;
 }
 
 .education-scroll-item.show {
