added initial loader and removed door animation

--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -171,6 +171,9 @@ html {
   .nav-link {
     margin-bottom: 0px;
   }
+}
+
+@media screen and (min-width: 992px) {
   .nav-link-btn:hover {
     background-color: #e76f51;
     transition: 0.4s ease-out;
