--- a/src/components/SuccessMsg/index.css
+++ b/src/components/SuccessMsg/index.css
@@ -14,7 +14,7 @@
   position: fixed;
   top: 0;
   right: -300px;
-  margin: 30px;
+  margin: 20px 10px 0px 0px;
   z-index: 1000;
   opacity: 0;
   transition: opacity 0.3s ease-in-out;
@@ -53,7 +53,7 @@
   border-radius: 50%;
   margin-left: 8px;
 }
-.icon {
+.success-icon {
   width: 17px;
   height: 17px;
   color: #269b24;
